# eapp-services/Models/AppSubmit.cs
@@ -1,0 +1,8 @@
+﻿namespace eapp_services.Models;
+
+public class AppSubmit
+{
+    public Guid? Id { get; set; }
+    public DataItemPost[]? DataItems { get; set; }
+    public DateTime? SubmittedDate { get; set; }
+}
