# eapp-services/Models/AppTemplate.cs
@@ -1,0 +1,7 @@
+﻿namespace eapp_services.Models;
+
+public class AppTemplate
+{
+    public Guid? Id { get; set; }
+    public string Name { get; set; }
+}
