# eapp-services/Models/DataItemPost.cs
@@ -1,0 +1,7 @@
+﻿namespace eapp_services.Models;
+
+public class DataItemPost
+{
+    public Guid DataItemId { get; set; }
+    public string Value { get; set; }
+}
