# eapp-services/Models/Stage.cs
@@ -1,0 +1,8 @@
+﻿namespace eapp_services.Models;
+
+public class Stage
+{
+    public int Order { get; set; }
+    public string Title { get; set; }
+    public DataItem[] DataItems { get; set; }
+}
